# docker-easy-haproxy

./: .dockerignore  .gitignore  .gitpod.yml  .travis.yml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASE.md  _config.yml  build-multiarch.sh  discover.py  discover.sh  docker-compose.yml  entrypoint.py  entrypoint.sh  example.yml  pyproject.toml  requirements.txt  resource-temp.yml  setup.py  static.py  swarm.py  swarm.sh
.github/: dependabot.yml
.github/workflows/: build.yml
.run/: pytest in tests.run.xml
assets/: crontab  supervisord.conf
assets/errors-custom/: 403.http  408.http  502.http
assets/etc/: supervisord.conf
assets/scripts/: banner.txt  certbot.sh  certbot_to_haproxy.sh  exit-event-listener.py  functions.sh  haproxy-reload.sh  haproxy.sh  k8s.py  static.py  swarm.py
conf.d/: 00-simple-comment.cfg  README.md
deploy/docker/: Dockerfile  docker-compose.yml  install.sh
deploy/kubernetes/: README.md  easyhaproxy-clusterip.yml  easyhaproxy-daemonset.yml  easyhaproxy-nodeport.yml  easyhaproxy.yml
docs/: acme.md  container-labels.md  digitalocean.md  docker-environment.md  docker.md  dokku.md  environment-variable.md  helm.md  icons.xcf  kubernetes.md  letsencrypt.md  limitations.md  logo.xcf  microk8s.md  other.md  pip.md  plugin-development.md  plugins.md  ssl.md  static.md  swarm.md  volumes.md  zerossl.md
docs/Plugins/: cleanup.md  cloudflare.md  deny-pages.md  fastcgi.md  ip-whitelist.md  jwt-validator.md
docs/concepts/: index.md  limitations.md
docs/getting-started/: docker.md  index.md  kubernetes.md  native.md  static.md  swarm.md
docs/guides/: acme.md  dashboard.md  digitalocean.md  dokku.md  helm.md  microk8s.md  plugin-development.md  plugins.md  ssl.md
docs/plugins/: cleanup.md  cloudflare.md  deny-pages.md  fastcgi.md  ip-whitelist.md  jwt-validator.md
docs/reference/: cli.md  container-labels.md  helm.md  (+3 more)
easymapping/: __init__.py
examples/: generate-keys.sh
kubernetes/: easyhaproxy.yml
scripts/: bump-version.sh  exit-event-listener.py  haproxy-reload.sh  haproxy.sh
src/: banner.txt  main.py  requirements.txt
templates/: bind.j2  frontend-mode-http.j2  frontend-mode-tcp.j2  haproxy.cfg.j2  ssl_default.j2
tests/: conftest.py  test_certbot.py  test_certbot_haproxy_config.py  test_containerenv.py  test_daemonize.py  test_docker.py  test_functions.py  test_kubernetes_processor.py  test_labels.py  test_parser.py  test_plugins.py  test_static.py
tests_e2e/: conftest.py  generate-keys.sh  test_docker_compose.py  test_kubernetes.py  test_proxy_headers.py  test_static.py  test_swarm.py  utils.py
(+225 files in other folders)
